# copiablebuf

./: Cargo.toml
src/: copiablebuf.rs
