[package]
name = "copiablebuf"
version = "0.0.3"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository.workspace = true
readme = "Readme.md"
description = "Copiable buffer, a tinier `Vec`, uses a fixed-size array to store a variable number of items."
keywords = ["container", "buffer", "array"]

[profile.release]
lto = "fat"

[lib]
name = "copiablebuf"
path = "src/copiablebuf.rs"
